--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Changer</title>
+
+</head>
+
+<body>
+
+    <div class="navbar">
+        <a href="https://github.com/MuhammadShakir-dev" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/muhammad-shakir-dev/" target="_blank">LinkedIn</a>
+    </div>
+
+    <h1>Color Scheme Switcher</h1>
+
+    <div class="btn-container">
+        <button id="grey"></button>
+        <button id="white"></button>
+        <button id="blue"></button>
+        <button id="yellow"></button>
+    </div>
+
+
+    <h2>
+        Try Clicking on one of the colors above to change the background color of this page
+    </h2>
+
+    <!--JS script tag-->
+    <!-- <script src="Color_Changer.js"></script> -->
+    <script src="main.js"></script>
+</body>
+
+</html>
